Primary translation of the main paragraphs.

--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 
-		<p><strong>This is a story of how harmless choices can make a harmful world.</strong></p>
+		<p><strong>Essa é uma história sobre como escolhas inofensivas podem resultar em um mundo nocivo.</strong></p>
 		<p>
-			These little cuties are 50% Triangles, 50% Squares, and 100% slightly shapist.
-			<span cartoon="i_like_squares.png">But only slightly!</span>
-			In fact, every polygon <i>prefers</i> being in a diverse crowd:
+			Essas pequenas fofuras são 50% Triângulos, 50% Quadrados, e 100% um pouquinho shapist.
+			<span cartoon="i_like_squares.png">Mas só um pouquinho!</span>
+			Na verdade, cada polígono <i>prefere</i> estar em um grupo diverso:
 		</p>
 
 		<iframe id="mini_intro" playable src="play/mini/mini_intro.html" width="800" height="385" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			You can only move them if they're unhappy with their immediate neighborhood.
-			Once they're OK where they are, <i>you can't move them until they're unhappy with their neighbors again</i>.
-			They've got one, simple rule:
+            Você só pode movê-los se estiverem descontentes com seus vizinhos imediatos.
+            Enquanto eles estiverem bem em seus lugares, <i>você não poderá movê-los até que eles estejam descontentes com seus vizinhos novamente</i>.
+            Eles possuem uma simples regra:
 		</p>
 
 		<p style="text-align:center">
 			<b>
-			“I wanna move if less than 1/3 of my neighbors are like me.”
+			“Eu quero me mudar se menos que 1/3 dos meus vizinhos forem como eu.”
 			</b>
 		</p>
 		<iframe playable src="play/mini/mini_unhappy.html" width="250" height="300" scrolling="no" style="float:left; margin:0; margin-left:10px; position:relative; left:-30px"  embedded></iframe>
@@ -80,14 +80,14 @@
 		<br>
 
 		<p>
-			Harmless, right?
-			Every polygon would be happy with a mixed neighborhood.
-			Surely their small bias can't affect the larger shape society that much?
-			Well...
+            Inofensivo, não?
+            Os polígonos ficariam felizes com uma vizinhança mista.
+            É claro que suas pequenas prefências não podem afetar tanto a grande sociedade de formatos, certo?
+            Bem...
 		</p>
 		<div class="instruction">
-			drag &amp; drop unhappy polygons until nobody is unhappy:<br>
-			<span style="font-size:18px">(just move them to random empty spots. don't think too much about it.)</span>
+			arraste &amp; solte polígonos descontentes até que ninguém esteja descontente:<br>
+			<span style="font-size:18px">(não pense muito, apenas mova-os para pontos aleatórios)</span>
 		</div>
 
 	</div>
@@ -100,23 +100,23 @@
 	<!-- CHAPTER -->
 	<div class="chapter"> 
 		<p>
-			And... our shape society becomes super segregated. Daaaaang.
+            E... nossa sociedade de formatos se torna super segregada. Mas que coisa...
 		</p>
 		<p>
-			Sometimes a neighborhood just becomes square,
-			and it's not their fault if no triangles wanna stick around.
-			And a triangular neighborhood would welcome a square, but
-			<span cartoon="square_left.png">they can't help it if squares ain't interested.</span>
+            Algumas vezes um vizinho se torna um quadrado,
+            e não é culpa deles se nenhum triângulo quer ficar por perto.
+            E uma vizinhança triangular receberia um quadrado de braços abertos, mas
+			<span cartoon="square_left.png">eles não podem fazer nada se os quadrados não estão interessados.</span>
 		</p>
 		
 		<iframe id="mini_neighborhood" playable src="play/mini/mini_neighborhood.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			In this next bit, unhappy shapes automatically move to random empty spots.
-			There's also a graph that tracks how much segregation there is over time.
+            Nesta próxima parte, formatos descontentes automaticamente mudarão para pontos vazios aleatórios.
+            Também há um gráfico que rastreia quanta segregação existe com o passar do tempo.
 		</p>
 		<div class="instruction">
-			run this simulation a few times. what happens?
+			execute este simulação algumas vezes. o que acontece?
 		</div>
 	</div>
 
@@ -128,23 +128,23 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			What's up with that? These are good shapes, <span cartoon="nice_triangle.jpg">nice shapes</span>.
-			And yet, though every individual only has a slight bias, the entire shape society cracks and splits.
+            Qual é? Esses são bons formatos, <span cartoon="nice_triangle.jpg">formatos bacanas</span>.
+			Ainda assim, embora cada indivíduo tenha uma apenas uma prefência leve, a sociedade inteira é quebrada e separada.
 		</p>
 		
 		<iframe id="mini_checkerboard" playable src="play/mini/mini_checkerboard.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			<strong>Small individual bias can lead to large collective bias.</strong>
+			<strong>Pequenas preferências individuais podem levar a grandes preferências coletivas.</strong>
 		</p>
 		<p>	
-			Equality is an unstable equilibrium.
-			The smallest of bias can push a whole society past the tipping point.
-			Well, what if we taught these shapes to have zero bias?
-			(Or if you're feeling particularly nasty today, more bias?)
+            Igualdade é um equilíbrio instável.
+            A menor das preferências pode empurrar toda uma sociedade a passar dos limites.
+            Bem, e se nós ensinássemos esses formatos a não ter nenhuma preferência?
+            (ou, se vc está particularmente cretino hoje, ainda mais preferência?)
 		</p>
 		<div class="instruction">
-			use the slider to adjust the shapes' individual bias:
+			use a barra para ajustar a prefência individual dos formatos:
 		</div>
 	</div>
 
@@ -156,9 +156,9 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			Notice how much more segregated things become, when you increase the bias beyond 33%.
-			What if the threshold was at 50%?
-			Seems reasonable for a shape to prefer not being in the minority...
+            Perceba o quão mais segregadas as coisas se tornam quando você eleva a preferência acima de 33%.
+            E se o limite fosse em 50%?
+            Parece sensato para um formato não preferir estar em minorias...
 		</p>
 		
 		<iframe id="mini_bias_1" playable src="play/mini/mini_bias_1.html" width="310" height="420" scrolling="no" style="float:left; margin:0; margin-left:50px" embedded></iframe>
@@ -168,13 +168,13 @@
 		</div>
 
 		<p>
-			So yeah, just turn everyone's bias down to zero, right?
-			Haha, NOPE. The real world doesn't start anew with a random shuffling of citizens every day.
-			Everyday, you're not shuffling.
+            Então tá, vamos zerar a preferência de todos, OK?
+            Haha, SEM CHANCE. O mundo real não recomeça todo dia com um embaralhado aleatório de cidadãos.
+            Diariamente, você não está embaralhando.
 		</p>
 
 		<div class="instruction">
-			world starts segregated. what happens when you lower the bias?
+            o mundo começa segregado. o que acontece quando você diminui a preferência?
 		</div>
 	</div>
 
@@ -186,23 +186,23 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			See what <i>doesn't</i> happen? 
-			No change. No mixing back together.
-			In a world where bias ever existed, being unbiased isn't enough!
-			We're gonna need active measures.
-			What if shapes wanted to seek out just a lil' more variety?
+            Vê o que <i>não</i> acontece? 
+            Nenhuma mudança. Nada de se misturar novamente.
+            Em um mundo onde preferências um dia existiram, não ter preferências não é o bastante!
+            Precisaremos de medidas mais ativas.
+            E se os formatos buscarem um pouco mais de variedade?
 		</p>
 		
 		<iframe id="mini_nonconform" playable src="play/mini/mini_nonconform.html" width="400" height="440" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			Woah. Even though each polygon would be okay with having up to 90% of their neighbors that are like them,
-			they all mix together!
-			Let's see this play out on a larger scale,
-			when we change the amount of bias and anti-bias for all shapes.
+            Uau. Embora cada polígono aceite ter até 90% de vizinhos que sejam como eles,
+            todos se misturam entre eles!
+            Vamos ver isso acontecer em uma escala maior,
+            trocando a quantidade de preferência e não-preferência para todos os formatos.
 		</p>
 		<div class="instruction">
-			world starts segregated. what happens when shapes demand even the smallest bit of diversity?
+			o mundo começa segregado. o que acontece quando os formatos demandam mesmo que um pequeno punhado de diversidade?
 		</div>
 	</div>
 
@@ -220,31 +220,31 @@
 		</p>
 		<p style="text-align:center">
 			<b>
-				GET THEM ALL IN THE BOX OF
-				<span style="color:hsl(0,90%,60%)">F</span>
-				<span style="color:hsl(36,90%,60%)">R</span>
+				MANDE TODOS ELES PARA A CAIXA DA
+				<span style="color:hsl(0,90%,60%)">A</span>
+				<span style="color:hsl(36,90%,60%)">M</span>
 				<span style="color:hsl(72,90%,45%)">I</span>
-				<span style="color:hsl(108,90%,60%)">E</span>
-				<span style="color:hsl(144,90%,60%)">N</span>
+				<span style="color:hsl(108,90%,60%)">Z</span>
+				<span style="color:hsl(144,90%,60%)">A</span>
 				<span style="color:hsl(180,90%,60%)">D</span>
-				<span style="color:hsl(216,90%,60%)">S</span>
-				<span style="color:hsl(252,90%,60%)">H</span>
-				<span style="color:hsl(288,90%,60%)">I</span>
-				<span style="color:hsl(324,90%,60%)">P</span>
+				<span style="color:hsl(216,90%,60%)">E</span>
+				<span style="color:hsl(252,90%,60%)">!</span>
+				<span style="color:hsl(288,90%,60%)">!</span>
+				<span style="color:hsl(324,90%,60%)">!</span>
 				<br>
-				<span style="font-size:18px">(hint: don't move them straight to the box; keep the pairs close together)</span>
+				<span style="font-size:18px">(dica: não mova-os diretamente para a caixa; mantenha os pares juntos)</span>
 			</b>
 		</p>
 
 		<iframe playable src="play/mini/mini_cooperate.html" width="810" height="290" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 		
 		<p>
-			At first, going out on your own can be isolating...
-			but by working together, step by step, we'll get there.
+            A princípio, avançar por contra própria pode ser solitário...
+            mas se trabalharmos juntos, aos poucos, chegaremos lá.
 		</p>
 
 		<div class="instruction">
-			finally, a big ol' sandbox to play around in.
+            finalmente, uma grande área pra você experimentar e brincar.
 		</div>
 	</div>
 
@@ -256,28 +256,28 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<div class="instruction" style="font-size:50px; line-height:50px">
-			WRAPPING UP:
+			RESUMINDO:
 		</div>
 		<p>
-			<b>1. Small individual bias &rarr; Large collective bias.</b>
+			<b>1. Pequena preferência individual &rarr; Grande preferência coletiva.</b>
 			<br>
 			<!--Micromotives, macrobehaviour...-->
-			When someone says a culture is shapist, they're not saying the <i>individuals</i> in it are shapist.
-			They're not attacking you personally.
+            Quando alguém diz que uma cultura é shapist, não estão dizendo que os <i>indivíduos</i> dentro dela são shapist.
+			Eles não estão te atacando pessoalmente.
 		</p>
 		<p>
-			<b>2. The past haunts the present.</b>
+			<b>2. O passado assombra o presente.</b>
 			<br>
-			Your bedroom floor doesn't stop being dirty just coz you stopped dropping food all over the carpet.
-			Creating equality is like staying clean: it takes work. And it's always a work in progress.
+            O chão do seu quarto não deixa de estar sujo só porque você parou de derrubar comida por todo o carpete.
+            Criar igualdade é como se manter limpo: dá trabalho. E sempre será um trabalho constante.
 		</p>
 		<p>
-			<b>3. Demand diversity near you.</b>
+			<b>3. Demande diversidade ao seu redor.</b>
 			<br>
-			If small biases created the mess we're in, small anti-biases might fix it.
-			Look around you. Your friends, your colleagues, that conference you're attending.
-			If you're all triangles, you're missing out on some amazing squares in your life -
-			that's unfair to everyone. Reach out, beyond your immediate neighbors.
+            Se pequenas preferências criaram a bagunça em que estamos, pequenas não-preferências talvez resolvam.
+            Olha a sua volta. Seus amigos, seus colegas de trabalho, a conferência que você está participando.
+            Se vocês são todos triângulos, sua vida está perdendo alguns quadrados maravilhosos -
+            isso é injusto pra todos. Estenda a mão, para além dos seus vizinhos imediatos.
 		</p>
 		<iframe playable src="play/mini/mini_ending.html" width="600" height="80" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 	</div>
@@ -286,7 +286,7 @@
 	<div style="width: 100%; background: #222; overflow: hidden; color:#ddd">
 		<div class="chapter">
 			<div class="instruction">
-				Thank you for playing this blog post!
+				Obrigado por jogar este artigo!
 			</div>
 			<br>
 			<div style="font-size:16px; line-height:18px">
