More paragraphs translation and fixes.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             trocando a quantidade de preferência e não-preferência para todos os formatos.
 		</p>
 		<div class="instruction">
-			o mundo começa segregado. o que acontece quando os formatos demandam mesmo que um pequeno punhado de diversidade?
+			o mundo começa segregado. o que acontece quando os formatos demandam diversidade, mesmo que um pequeno punhado?
 		</div>
 	</div>
 
@@ -214,9 +214,9 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			All it takes is a change in the perception of what an acceptable environment looks like.
-			So, fellow shapes, remember it's not about triangles vs squares,
-			it's about deciding what we want the world to look like, and settling for no less.
+            Tudo que se precisa é a mudança da percepção do que é um ambiente aceitável.
+            Então, formatos amigos, lembrem-se de que a questão não é sobre triângulos contra quadrados,
+            mas sim sobre decidir como queremos que nosso mundo seja, e não nos conformar com menos do que isso.
 		</p>
 		<p style="text-align:center">
 			<b>
@@ -275,7 +275,7 @@
 			<b>3. Demande diversidade ao seu redor.</b>
 			<br>
             Se pequenas preferências criaram a bagunça em que estamos, pequenas não-preferências talvez resolvam.
-            Olha a sua volta. Seus amigos, seus colegas de trabalho, a conferência que você está participando.
+            Olhe a sua volta. Seus amigos, seus colegas de trabalho, a conferência da qual você está participando.
             Se vocês são todos triângulos, sua vida está perdendo alguns quadrados maravilhosos -
             isso é injusto pra todos. Estenda a mão, para além dos seus vizinhos imediatos.
 		</p>
