--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		<p><strong>Essa é uma história sobre como escolhas inofensivas podem resultar em um mundo nocivo.</strong></p>
 		<p>
-			Essas pequenas fofuras são 50% Triângulos, 50% Quadrados, e 100% um pouquinho shapist.
+			Essas pequenas fofuras são 50% Triângulos, 50% Quadrados, e 100% um pouquinho formófobas.
 			<span cartoon="i_like_squares.png">Mas só um pouquinho!</span>
 			Na verdade, cada polígono <i>prefere</i> estar em um grupo diverso:
 		</p>
@@ -82,7 +82,7 @@
 		<p>
             Inofensivo, não?
             Os polígonos ficariam felizes com uma vizinhança mista.
-            É claro que suas pequenas prefências não podem afetar tanto a grande sociedade de formatos, certo?
+            É claro que suas pequenas prefências não podem afetar tanto a grande sociedade de formas, certo?
             Bem...
 		</p>
 		<div class="instruction">
@@ -100,7 +100,7 @@
 	<!-- CHAPTER -->
 	<div class="chapter"> 
 		<p>
-            E... nossa sociedade de formatos se torna super segregada. Mas que coisa...
+            E... nossa sociedade de formas se torna super segregada. Mas que coisa...
 		</p>
 		<p>
             Algumas vezes um vizinho se torna um quadrado,
@@ -112,7 +112,7 @@
 		<iframe id="mini_neighborhood" playable src="play/mini/mini_neighborhood.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-            Nesta próxima parte, formatos descontentes automaticamente mudarão para pontos vazios aleatórios.
+            Nesta próxima parte, formas descontentes automaticamente mudarão para pontos vazios aleatórios.
             Também há um gráfico que rastreia quanta segregação existe com o passar do tempo.
 		</p>
 		<div class="instruction">
@@ -128,8 +128,8 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-            Qual é? Esses são bons formatos, <span cartoon="nice_triangle.jpg">formatos bacanas</span>.
-			Ainda assim, embora cada indivíduo tenha uma apenas uma prefência leve, a sociedade inteira é quebrada e separada.
+            Qual é? Essas são boas formas, <span cartoon="nice_triangle.jpg">formas bacanas</span>.
+			Ainda assim, embora cada indivíduo tenha apenas uma prefência leve, a sociedade inteira é quebrada e separada.
 		</p>
 		
 		<iframe id="mini_checkerboard" playable src="play/mini/mini_checkerboard.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
@@ -140,11 +140,11 @@
 		<p>	
             Igualdade é um equilíbrio instável.
             A menor das preferências pode empurrar toda uma sociedade a passar dos limites.
-            Bem, e se nós ensinássemos esses formatos a não ter nenhuma preferência?
+            Bem, e se nós ensinássemos essas formas a não ter nenhuma preferência?
             (ou, se vc está particularmente cretino hoje, ainda mais preferência?)
 		</p>
 		<div class="instruction">
-			use a barra para ajustar a prefência individual dos formatos:
+			use a barra para ajustar a prefência individual das formas:
 		</div>
 	</div>
 
@@ -158,7 +158,7 @@
 		<p>
             Perceba o quão mais segregadas as coisas se tornam quando você eleva a preferência acima de 33%.
             E se o limite fosse em 50%?
-            Parece sensato para um formato não preferir estar em minorias...
+            Parece sensato para uma forma preferir não estar em minorias...
 		</p>
 		
 		<iframe id="mini_bias_1" playable src="play/mini/mini_bias_1.html" width="310" height="420" scrolling="no" style="float:left; margin:0; margin-left:50px" embedded></iframe>
@@ -190,7 +190,7 @@
             Nenhuma mudança. Nada de se misturar novamente.
             Em um mundo onde preferências um dia existiram, não ter preferências não é o bastante!
             Precisaremos de medidas mais ativas.
-            E se os formatos buscarem um pouco mais de variedade?
+            E se as formas buscarem um pouco mais de variedade?
 		</p>
 		
 		<iframe id="mini_nonconform" playable src="play/mini/mini_nonconform.html" width="400" height="440" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
@@ -199,10 +199,10 @@
             Uau. Embora cada polígono aceite ter até 90% de vizinhos que sejam como eles,
             todos se misturam entre eles!
             Vamos ver isso acontecer em uma escala maior,
-            trocando a quantidade de preferência e não-preferência para todos os formatos.
+            trocando a quantidade de preferência e não-preferência para todas as formas.
 		</p>
 		<div class="instruction">
-			o mundo começa segregado. o que acontece quando os formatos demandam diversidade, mesmo que um pequeno punhado?
+			o mundo começa segregado. o que acontece quando as formas demandam diversidade, mesmo que um pequeno punhado?
 		</div>
 	</div>
 
@@ -215,7 +215,7 @@
 	<div class="chapter">
 		<p>
             Tudo que se precisa é a mudança da percepção do que é um ambiente aceitável.
-            Então, formatos amigos, lembrem-se de que a questão não é sobre triângulos contra quadrados,
+            Então, formas amigas, lembrem-se de que a questão não é sobre triângulos contra quadrados,
             mas sim sobre decidir como queremos que nosso mundo seja, e não nos conformar com menos do que isso.
 		</p>
 		<p style="text-align:center">
@@ -262,7 +262,7 @@
 			<b>1. Pequena preferência individual &rarr; Grande preferência coletiva.</b>
 			<br>
 			<!--Micromotives, macrobehaviour...-->
-            Quando alguém diz que uma cultura é shapist, não estão dizendo que os <i>indivíduos</i> dentro dela são shapist.
+            Quando alguém diz que uma cultura é formófoba, não estão dizendo que os <i>indivíduos</i> dentro dela são formófobos.
 			Eles não estão te atacando pessoalmente.
 		</p>
 		<p>
